<resources>
    <string name="app_name">Club</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search">Search</string>
    <string name="hint_search">Enter keywords</string>
    <string name="company">Company</string>
    <string name="member">Member</string>
    <string name="msg_generic_no_data">No data</string>
    <string name="title_activity_members">Members</string>
    <string name="companies">Companies</string>
    <string name="favorites">Favorites</string>
    <string name="about">About</string>
    <string name="nav_header_title">Club</string>
    <string name="nav_header_subtitle">nnhl.mgk@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">OPEN</string>
    <string name="navigation_drawer_close">CLOSE</string>

    <string name="default_order">DEFAULT</string>
    <string name="asc_order">ASCENDING</string>
    <string name="desc_order">DESCENDING</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="members">Members</string>
    <string name="goToWeb">Go to website</string>
    <string name="sortBy">Sort By</string>
    <string name="ok">OK</string>
    <string name="version">Version 1.0</string>
    <string name="developedBy">Developed by</string>
    <string name="developer">Nyi Nyi Htun Lwin</string>

    <string-array name="member_filter">
        <item>Name</item>
        <item>Age</item>
    </string-array>
</resources>
