<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@color/white_full"
                android:layout_height="wrap_content">
    <TextView
            android:id="@+id/tvSortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sortBy"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/text_regular_2x"
            android:textColor="@color/secondary_text"
            android:padding="@dimen/margin_medium_2"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            android:layout_below="@id/tvSortBy"/>

    <RadioGroup
            android:id="@+id/rGFilter"
            android:layout_below="@id/tvSortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_medium_2"
            android:paddingEnd="@dimen/margin_medium_2"
            android:orientation="vertical">
        <RadioButton
                android:id="@+id/rbDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/margin_medium_2"
                android:checked="true"
                android:text="@string/default_order"/>
        <RadioButton
                android:id="@+id/rbAsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/margin_medium_2"
                android:text="@string/asc_order"/>
        <RadioButton
                android:id="@+id/rbDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/margin_medium_2"
                android:text="@string/desc_order"/>
    </RadioGroup>
</RelativeLayout>