<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">


        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:titleTextColor="@color/white_full"/>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
                android:id="@+id/fl_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="2dp">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:layout_marginBottom="@dimen/margin_medium_2"
                    app:cardBackgroundColor="@color/white_full"
                    app:cardCornerRadius="@dimen/margin_small"
                    app:cardElevation="2dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_small"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_search_24dp"/>

                    <EditText
                            android:id="@+id/et_search"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="@dimen/margin_medium"
                            android:layout_weight="1"
                            android:background="@android:drawable/screen_background_light_transparent"
                            android:gravity="center_vertical"
                            android:hint="@string/hint_search"
                            android:imeOptions="actionSearch"
                            android:singleLine="true"
                            android:textColorHint="@color/secondary_text"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </FrameLayout>
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:paddingStart="@dimen/margin_medium_2"
                android:elevation="2dp"
                android:paddingBottom="@dimen/margin_medium"
                android:paddingEnd="@dimen/margin_medium"
                android:orientation="horizontal"
                android:layout_below="@id/fl_search">
            <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/company"
                    android:checked="true"
                    android:textColor="@color/white_full"/>
            <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/member"
                    android:textColor="@color/white_full"/>
        </RadioGroup>

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/fl_search">

        </FrameLayout>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>